ResourceLoadStatistics are not using unique paths during test runs https://bugs.webkit.org/show_bug.cgi?id=172861 <rdar://problem/32442251>

Reviewed by Darin Adler.

Source/WebKit2:

Add WKContextConfigurationSetResourceLoadStatisticsDirectory() C API to allow
WKTR to use a custom directory.

* UIProcess/API/APIProcessPoolConfiguration.cpp:
(API::ProcessPoolConfiguration::createWithWebsiteDataStoreConfiguration):
(API::ProcessPoolConfiguration::ProcessPoolConfiguration):
(API::ProcessPoolConfiguration::copy):
* UIProcess/API/APIProcessPoolConfiguration.h:
* UIProcess/API/C/WKContextConfigurationRef.cpp:
(WKContextConfigurationCopyResourceLoadStatisticsDirectory):
(WKContextConfigurationSetResourceLoadStatisticsDirectory):
* UIProcess/API/C/WKContextConfigurationRef.h:
* UIProcess/WebProcessPool.cpp:
(WebKit::legacyWebsiteDataStoreConfiguration):

Tools:

Make sure WebKitTestRunner sets a temporary path for saving resource
load statistics.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::generateContextConfiguration):


Canonical link: https://commits.webkit.org/189771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217743 268f45cc-cd09-0410-ab3c-d52691b4dbfc